# spacemacs-InstallerAndConfig

./: .dockerignore  .gitignore  .gitmodules  .spacemacs  .spacemacs_windows  Dockerfile  README.md  build_and_push.sh  dockerfile  getDefaultCompilerIncludePath.txt  post_build.sh  setupGit.sh  spacemacs  spacemacsAutoInstall.sh  spacemacsAutoInstall_manjaro.sh  startEmacsDockerLinux.sh  startEmacsDockerWindows.bat  startEmacsDockerWindows.sh  startEmacsDockerWindows_Unsafe.sh  startEmacsDockerWindows_experimental.sh  startEmacsDockerWsl2.sh
GTD/: Archive.org  AreasOfFocus.org  CalendarActionList.org  Inbox.org  NextActionList.org  ProjectList.org  Projects.org  Reference.org  SingleTasks.org  Someday.org  SomedayMaybe.org  Visions.org  WaitingFor.org
c++ClangStuff/: .clang-tidy  .clang_complete  CMakeLists.txt
c++SampleCMAKEProject/: .clang-format  CMakeLists.txt  FindClangFormat.cmake  getCompileFlags.sh
c++SampleCMAKEProject/src/: main.cpp  main.h
gradleTest/: .project  build.gradle  settings.gradle
gradleTest/src/main/java/com/mycompany/gradleTest/: .#ClassB.java  main.java
gradleTest/src/main/java/com/mycompany/gradleTest/zeug/: ClassB.java
mavenTest/: .project  pom.xml
mavenTest/src/main/java/com/mycompany/maventest/: main.java
mavenTest/src/main/java/com/mycompany/maventest/zeug/: ClassB.java
private/: setupGit.sh
